--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,10 @@
     "moment": "^2.30.1",
     "mongoose": "^7.6.9",
     "morgan": "^1.10.0",
+    "mssql": "^10.0.2",
+    "nodemon": "^3.1.0",
     "path": "^0.12.7",
-    "redis": "^4.6.13"
+    "redis": "^4.6.13",
+    "sequelize": "^6.37.1"
   }
 }
