--- a/Client/package.json
+++ b/Client/package.json
@@ -11,9 +11,11 @@
     "lint-fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.23.1",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
