--- a/Client/package.json
+++ b/Client/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "bootstrap-vue": "^2.23.1",
     "pinia": "^2.0.17",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
-    "v-calendar": "^3.0.0-alpha.8",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
